--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,30 +1,27 @@
 .cont-cust {
-  margin: -15px;
   margin-left: auto;
   margin-right: auto;
-}
 
-  @media screen and (max-width: $tablet) {
-    .cont-cust {
-max-width: 719px;  }
-    }
+  @include dq(only-phone) {
+    max-width: $phone;
+  }
+  @include dq(only-tablet) {
+    max-width: $tablet;
+  }
 
-@media screen and (max-width: $desktop) {
-    .cont-cust {
-    max-width: 1023px; 
-    }   
+  @include dq(desktop) {
+    max-width: $desktop;
+  }
 }
 
 .customers {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin: -15px;
   align-items: center;
   justify-content: center;
 
-
-
-    &__item {
+  &__item {
     max-width: 210px;
     margin: 15px;
     width: calc((100% - 2 * 30px) / 2);
@@ -52,14 +49,13 @@ max-width: 719px;  }
     margin: auto;
   }
 }
-@media screen and (min-width: $tablet) and (max-width: $desktop) {
+@include dq(only-tablet) {
   .customers__item {
     max-width: 226px;
-    margin: 15px;
     width: calc((100% - 3 * 30px) / 3);
   }
 }
-@media screen and (min-width: $desktop) {
+@include dq(desktop) {
   .customers__item {
     max-width: 170px;
     margin: 15px;
