--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,11 +4,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  height: 581px;
-  width: 528px;
+  height: 609px;
+  width: 450px;
   background-color: $hero-color;
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14),
     0 1px 3px rgba(0, 0, 0, 0.12);
+
+  @include dq(desktop) {
+    height: 581px;
+    width: 528px;
+  }
 }
 
 .modal-contact {
@@ -93,8 +98,6 @@
 
 // ---------------- Форма ------------------ //
 
-
-
 .form-group-agrees {
   display: flex;
   justify-content: center;
@@ -103,11 +106,17 @@
   &__checkbox {
     display: flex;
     align-items: center;
-    font-size: 14px;
+    font-size: 12px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
     color: $text-color;
+
+    @include dq(desktop) {
+      font-size: 14px;
+    }
   }
+  
+
   &__input {
     position: absolute;
     white-space: nowrap;
