--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,89 +1,86 @@
-// /* співробітники */
-
-
-.t-person {
-    // padding: 60px 15px;
+.t-persons {
   background-color: $bg-color;
-  
+}
+.t-person {
+  margin-left: auto;
+  margin-right: auto;
+  @include dq(only-tablet) {
+    max-width: $tablet;
+  }
 
-    @media screen and (max-width: $desktop) {
-        max-width: 1181px; 
-        }   
-
-
-
+  @include dq(desktop) {
+    max-width: $desktop;
+  }
 }
 
-
 .team {
-
   &__person {
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    align-items: center;
-    justify-content: center;
-width: 450px;
-
+    width: 450px;
     background-color: $hero-color;
     border: 0;
     border-radius: 0px 0px 4px 4px;
-
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
   }
-
-
+//   &__person:not(:last-child) {
+//     margin-bottom: 30px;
+//   }
 
   &__name {
-    
     color: $title-color;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-bottom: 10px;
+    margin-top: 30px;
   }
   &__position {
-        color: $text-color;
+    color: $text-color;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-bottom: 16px;
+  }
+}
+@include dq(only-phone) {
+    .team__person:not(:last-child) {
+        margin-bottom: 30px;}
+
+}
+@include dq(only-tablet) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .team__person {
+    max-width: 354px;
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 }
 
-@media screen and (min-width: $tablet ) and (max-width: $desktop) {
- 
- .team   {
-        display: flex;
-   flex-wrap: wrap;
-   
- align-items: center;  
- justify-content: center;
- }
-
- .team__person {
- max-width: 354px;
- margin: 15px;
- width: calc((100% - 2 * 30px) / 2);
-         }
-   }
-  @media screen and (min-width: $desktop) {
-    .team {
-        display: flex;
-    }
-    .team__position {
+@include dq(desktop) {
+  .team {
+    display: flex;
+    margin: -15px;
+  }
+  .team__position {
     margin-top: 10px;
     margin-bottom: 16px;
-    }
-    .team__name {
-margin-top: $item-work-gap;
-margin-bottom: 0;
-    }
+  }
+  .team__name {
+    margin-top: $item-work-gap;
+    margin-bottom: 0;
+  }
+  .team__person {
+    width: calc((100% - 4 * 30px) / 4);
+    margin: 15px;
+    max-width: 270px;  
+  }
+ 
+}
 
-.team__person {
-margin-right: $item-work-gap;
-}
-   .team__person:nth-child(4n) {
-     margin-right: 0;
-}
-}
