--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -132,7 +132,7 @@
     color: $title-color;
     font-weight: 700;
     font-size: 18px;
-    line-height: 2;
+    line-height: calc(36 / 18);
     letter-spacing: 0.06em;
   }
   &__example {
