--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,7 +12,7 @@ $border-color: #ececec;
 $active-color: #188ce8;
 $footer-color: #ffffff60;
 $active-footer-color:  rgba(33, 150, 243, 1);
-$font-body: "Roboro";
+$font-body: "Roboto";
 $font-weblogo: "Raleway";
 
 // ------------ Breakpoints -----------
