--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -69,6 +69,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
+  overflow-y: scroll;
   @extend %transition;
 }
 
